--- a/index.html
+++ b/index.html
@@ -12,29 +12,56 @@
 </head>
 <body>
   <section class="contact pad-t-2 pad-b-2 gutter max-length">
-     <div class="unit max-length">
-       <h1 class="normal push-1">Want to go to Mars?</h1>
-       <p class="mega">We’re looking for super-awesome human beings who want to make the long trek to Mars for the adventure of a lifetime.</p>
+    <div class="unit max-length">
+      <h1 class="normal push-1">Want to go to Mars?</h1>
+      <p class="mega">We’re looking for super-awesome human beings who want to make the long trek to Mars for the adventure of a lifetime.</p>
 
-       <fieldset class="push-0">
-         <legend class="normal italic push giga">Personal details</legend>
+      <fieldset class="push-0">
+        <legend class="normal italic push giga">Personal details</legend>
 
-         <form class="grid push-0" method="POST" action="https://formspree.io/gran0449@algonquinlive.com">
-           <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2 push">
-             <label for="name">Name</label>
-             <input id="name" name="name">
-           </div>
+        <form class="grid push-0" method="POST" action="https://formspree.io/gran0449@algonquinlive.com">
+          <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2 push">
+            <label for="name">Name</label>
+            <input id="name" name="name">
+          </div>
 
-           <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2 push">
-             <label for="age">Age</label>
-             <input id="age" name="age">
-           </div>
+          <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2 push">
+            <label for="age">Age</label>
+            <input id="age" name="age">
+          </div>
 
-           <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2 push">
-             <label for="email">Email</label>
-             <input type="email" id="email" name="email">
-           </div>
+          <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2 push">
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email">
+          </div>
 
-           <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2 push">
-             <label for="fitness">Physical fitness</label>
-             <select id="fitness" name="fitness">
+          <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2 push">
+            <label for="fitness">Physical fitness</label>
+            <select id="fitness" name="fitness">
+              <option>Fit as a fiddle</option>
+              <option>Not terribly strong</option>
+              <option>A little couch-potato-y</option>
+            </select>
+          </div>
+
+          <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-1-2 push">
+            <label for="address">Address</label>
+            <textarea id="address" name="address" required></textarea>
+          </div>
+        </form>
+      </fieldset>
+
+      <fieldset>
+        <legend class="normal italic giga">Mission statement</legend>
+        <div class="unit unit-xs-1 push">
+          <label for="message">Why do you want to go to Mars?</label>
+          <textarea id="message" name="message" required></textarea>
+        </div>
+
+        <div class="text-center">
+          <button class="unit grid-middle btn" type="submit">Register for the trip!</button>
+        </div>
+        <input type="hidden" name="subject" value="Request to join the mission">
+      </fieldset>
+    </div>
+  </section>
