Add another option tag

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
           <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2 push">
             <label for="fitness">Physical fitness</label>
             <select id="fitness" name="fitness">
+              <option>Super-human</option>
               <option>Fit as a fiddle</option>
               <option>Not terribly strong</option>
               <option>A little couch-potato-y</option>
